@@ -47,196 +47,202 @@ typedef union byte_stream_float64
 } byte_stream_float64_t;
 
 #define byte_stream_copy_to_uint16_big_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 0 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ];
+	( value )   = ( byte_stream )[ 0 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ];
 
 #define byte_stream_copy_to_uint16_little_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 0 ];
+	( value )   = ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 0 ];
 
 #define byte_stream_copy_to_uint24_big_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 0 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 2 ];
+	( value )   = ( byte_stream )[ 0 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 2 ];
 
 #define byte_stream_copy_to_uint24_little_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 2 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 0 ];
+	( value )   = ( byte_stream )[ 2 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 0 ];
 
 #define byte_stream_copy_to_uint32_big_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 0 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 2 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 3 ];
+	( value )   = ( byte_stream )[ 0 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 2 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 3 ];
 
 #define byte_stream_copy_to_uint32_little_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 3 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 2 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 0 ];
+	( value )   = ( byte_stream )[ 3 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 2 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 0 ];
 
 #define byte_stream_copy_to_uint48_big_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 0 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 2 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 3 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 4 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 5 ];
+	( value )   = ( byte_stream )[ 0 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 2 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 3 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 4 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 5 ];
 
 #define byte_stream_copy_to_uint48_little_endian( byte_stream, value ) \
-	value  |= ( byte_stream )[ 5 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 4 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 3 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 2 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 0 ];
+	( value )  |= ( byte_stream )[ 5 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 4 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 3 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 2 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 0 ];
 
 #define byte_stream_copy_to_uint64_big_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 0 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 2 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 3 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 4 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 5 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 6 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 7 ];
+	( value )   = ( byte_stream )[ 0 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 2 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 3 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 4 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 5 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 6 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 7 ];
 
 #define byte_stream_copy_to_uint64_little_endian( byte_stream, value ) \
-	value   = ( byte_stream )[ 7 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 6 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 5 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 4 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 3 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 2 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 1 ]; \
-	value <<= 8; \
-	value  |= ( byte_stream )[ 0 ];
+	( value )   = ( byte_stream )[ 7 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 6 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 5 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 4 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 3 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 2 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 1 ]; \
+	( value ) <<= 8; \
+	( value )  |= ( byte_stream )[ 0 ];
 
 #define byte_stream_copy_from_uint16_big_endian( byte_stream, value ) \
-	( byte_stream )[ 0 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 0 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint16_little_endian( byte_stream, value ) \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 0 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 0 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint24_big_endian( byte_stream, value ) \
-	( byte_stream )[ 0 ] = (uint8_t) ( ( value >> 16 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 2 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 0 ] = (uint8_t) ( ( ( value ) >> 16 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 2 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint24_little_endian( byte_stream, value ) \
-	( byte_stream )[ 2 ] = (uint8_t) ( ( value >> 16 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 0 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 2 ] = (uint8_t) ( ( ( value ) >> 16 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 0 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint32_big_endian( byte_stream, value ) \
-	( byte_stream )[ 0 ] = (uint8_t) ( ( value >> 24 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 16 ) & 0x0ff ); \
-	( byte_stream )[ 2 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 3 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 0 ] = (uint8_t) ( ( ( value ) >> 24 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 16 ) & 0x0ff ); \
+	( byte_stream )[ 2 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 3 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint32_little_endian( byte_stream, value ) \
-	( byte_stream )[ 3 ] = (uint8_t) ( ( value >> 24 ) & 0x0ff ); \
-	( byte_stream )[ 2 ] = (uint8_t) ( ( value >> 16 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 0 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 3 ] = (uint8_t) ( ( ( value ) >> 24 ) & 0x0ff ); \
+	( byte_stream )[ 2 ] = (uint8_t) ( ( ( value ) >> 16 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 0 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint48_big_endian( byte_stream, value ) \
-	( byte_stream )[ 0 ] = (uint8_t) ( ( value >> 40 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 32 ) & 0x0ff ); \
-	( byte_stream )[ 2 ] = (uint8_t) ( ( value >> 24 ) & 0x0ff ); \
-	( byte_stream )[ 3 ] = (uint8_t) ( ( value >> 16 ) & 0x0ff ); \
-	( byte_stream )[ 4 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 5 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 0 ] = (uint8_t) ( ( ( value ) >> 40 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 32 ) & 0x0ff ); \
+	( byte_stream )[ 2 ] = (uint8_t) ( ( ( value ) >> 24 ) & 0x0ff ); \
+	( byte_stream )[ 3 ] = (uint8_t) ( ( ( value ) >> 16 ) & 0x0ff ); \
+	( byte_stream )[ 4 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 5 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint48_little_endian( byte_stream, value ) \
-	( byte_stream )[ 5 ] = (uint8_t) ( ( value >> 40 ) & 0x0ff ); \
-	( byte_stream )[ 4 ] = (uint8_t) ( ( value >> 32 ) & 0x0ff ); \
-	( byte_stream )[ 3 ] = (uint8_t) ( ( value >> 24 ) & 0x0ff ); \
-	( byte_stream )[ 2 ] = (uint8_t) ( ( value >> 16 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 0 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 5 ] = (uint8_t) ( ( ( value ) >> 40 ) & 0x0ff ); \
+	( byte_stream )[ 4 ] = (uint8_t) ( ( ( value ) >> 32 ) & 0x0ff ); \
+	( byte_stream )[ 3 ] = (uint8_t) ( ( ( value ) >> 24 ) & 0x0ff ); \
+	( byte_stream )[ 2 ] = (uint8_t) ( ( ( value ) >> 16 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 0 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint64_big_endian( byte_stream, value ) \
-	( byte_stream )[ 0 ] = (uint8_t) ( ( value >> 56 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 48 ) & 0x0ff ); \
-	( byte_stream )[ 2 ] = (uint8_t) ( ( value >> 40 ) & 0x0ff ); \
-	( byte_stream )[ 3 ] = (uint8_t) ( ( value >> 32 ) & 0x0ff ); \
-	( byte_stream )[ 4 ] = (uint8_t) ( ( value >> 24 ) & 0x0ff ); \
-	( byte_stream )[ 5 ] = (uint8_t) ( ( value >> 16 ) & 0x0ff ); \
-	( byte_stream )[ 6 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 7 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 0 ] = (uint8_t) ( ( ( value ) >> 56 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 48 ) & 0x0ff ); \
+	( byte_stream )[ 2 ] = (uint8_t) ( ( ( value ) >> 40 ) & 0x0ff ); \
+	( byte_stream )[ 3 ] = (uint8_t) ( ( ( value ) >> 32 ) & 0x0ff ); \
+	( byte_stream )[ 4 ] = (uint8_t) ( ( ( value ) >> 24 ) & 0x0ff ); \
+	( byte_stream )[ 5 ] = (uint8_t) ( ( ( value ) >> 16 ) & 0x0ff ); \
+	( byte_stream )[ 6 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 7 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_copy_from_uint64_little_endian( byte_stream, value ) \
-	( byte_stream )[ 7 ] = (uint8_t) ( ( value >> 56 ) & 0x0ff ); \
-	( byte_stream )[ 6 ] = (uint8_t) ( ( value >> 48 ) & 0x0ff ); \
-	( byte_stream )[ 5 ] = (uint8_t) ( ( value >> 40 ) & 0x0ff ); \
-	( byte_stream )[ 4 ] = (uint8_t) ( ( value >> 32 ) & 0x0ff ); \
-	( byte_stream )[ 3 ] = (uint8_t) ( ( value >> 24 ) & 0x0ff ); \
-	( byte_stream )[ 2 ] = (uint8_t) ( ( value >> 16 ) & 0x0ff ); \
-	( byte_stream )[ 1 ] = (uint8_t) ( ( value >> 8 ) & 0x0ff ); \
-	( byte_stream )[ 0 ] = (uint8_t) ( value & 0x0ff )
+	( byte_stream )[ 7 ] = (uint8_t) ( ( ( value ) >> 56 ) & 0x0ff ); \
+	( byte_stream )[ 6 ] = (uint8_t) ( ( ( value ) >> 48 ) & 0x0ff ); \
+	( byte_stream )[ 5 ] = (uint8_t) ( ( ( value ) >> 40 ) & 0x0ff ); \
+	( byte_stream )[ 4 ] = (uint8_t) ( ( ( value ) >> 32 ) & 0x0ff ); \
+	( byte_stream )[ 3 ] = (uint8_t) ( ( ( value ) >> 24 ) & 0x0ff ); \
+	( byte_stream )[ 2 ] = (uint8_t) ( ( ( value ) >> 16 ) & 0x0ff ); \
+	( byte_stream )[ 1 ] = (uint8_t) ( ( ( value ) >> 8 ) & 0x0ff ); \
+	( byte_stream )[ 0 ] = (uint8_t) ( ( value ) & 0x0ff )
 
 #define byte_stream_bit_rotate_left_8bit( byte_stream, number_of_bits ) \
-	( ( byte_stream << number_of_bits ) | ( byte_stream >> ( 8 - number_of_bits ) ) )
-
-#define byte_stream_bit_rotate_left_16bit( byte_stream, number_of_bits ) \
-	( ( byte_stream << number_of_bits ) | ( byte_stream >> ( 16 - number_of_bits ) ) )
-
-#define byte_stream_bit_rotate_left_32bit( byte_stream, number_of_bits ) \
-	( ( byte_stream << number_of_bits ) | ( byte_stream >> ( 32 - number_of_bits ) ) )
-
-#define byte_stream_bit_rotate_left_64bit( byte_stream, number_of_bits ) \
-	( ( byte_stream << number_of_bits ) | ( byte_stream >> ( 64 - number_of_bits ) ) )
+	( ( ( byte_stream ) << ( number_of_bits ) ) | ( ( byte_stream ) >> ( 8 - ( number_of_bits ) ) ) )
 
 #define byte_stream_bit_rotate_right_8bit( byte_stream, number_of_bits ) \
-	( ( byte_stream >> number_of_bits ) | ( byte_stream << ( 8 - number_of_bits ) ) )
+	( ( ( byte_stream ) >> ( number_of_bits ) ) | ( ( byte_stream ) << ( 8 - ( number_of_bits ) ) ) )
+
+#define byte_stream_bit_rotate_left_16bit( byte_stream, number_of_bits ) \
+	( ( ( byte_stream ) << ( number_of_bits ) ) | ( ( byte_stream ) >> ( 16 - ( number_of_bits ) ) ) )
 
 #define byte_stream_bit_rotate_right_16bit( byte_stream, number_of_bits ) \
-	( ( byte_stream >> number_of_bits ) | ( byte_stream << ( 16 - number_of_bits ) ) )
+	( ( ( byte_stream ) >> ( number_of_bits ) ) | ( ( byte_stream ) << ( 16 - ( number_of_bits ) ) ) )
+
+#define byte_stream_bit_rotate_left_32bit( byte_stream, number_of_bits ) \
+	( ( ( byte_stream ) << ( number_of_bits ) ) | ( ( byte_stream ) >> ( 32 - ( number_of_bits ) ) ) )
 
 #define byte_stream_bit_rotate_right_32bit( byte_stream, number_of_bits ) \
-	( ( byte_stream >> number_of_bits ) | ( byte_stream << ( 32 - number_of_bits ) ) )
+	( ( ( byte_stream ) >> ( number_of_bits ) ) | ( ( byte_stream ) << ( 32 - ( number_of_bits ) ) ) )
+
+#define byte_stream_bit_rotate_left_64bit( byte_stream, number_of_bits ) \
+	( ( ( byte_stream ) << ( number_of_bits ) ) | ( ( byte_stream ) >> ( 64 - ( number_of_bits ) ) ) )
 
 #define byte_stream_bit_rotate_right_64bit( byte_stream, number_of_bits ) \
-	( ( byte_stream >> number_of_bits ) | ( byte_stream << ( 64 - number_of_bits ) ) )
+	( ( ( byte_stream ) >> ( number_of_bits ) ) | ( ( byte_stream ) << ( 64 - ( number_of_bits ) ) ) )
+
+#define byte_stream_bit_rotate_left( value, number_of_bits ) \
+	( ( ( value ) << ( number_of_bits ) ) | ( ( value ) >> ( ( sizeof( value ) << 3 ) - ( number_of_bits ) ) ) )
+
+#define byte_stream_bit_rotate_right( value, number_of_bits ) \
+	( ( ( value ) >> ( number_of_bits ) ) | ( ( value ) << ( ( sizeof( value ) << 3 ) - ( number_of_bits ) ) ) )
 
 #if defined( __cplusplus )
 }
